--- a/ImgurAPI/ImgurAPI.csproj
+++ b/ImgurAPI/ImgurAPI.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Models\ImageModel.cs" />
     <Compile Include="Models\ImageUploadModel.cs" />
     <Compile Include="Models\Params\AlbumCreationParam.cs" />
+    <Compile Include="Models\Params\GallerySearchParam.cs" />
     <Compile Include="Models\Params\ImageUploadParam.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
