更新專輯和評論功能，重構數據模型
在 `Album.cs` 中，修改專輯投票和收藏功能，將返回模型類型更改為 `VotingResponseModel`，並新增 `AlbumImageFavorite` 方法。調整方法格式以提升可讀性。

在 `Comment.cs` 中，新增評論獲取、投票和創建功能，並引入 `CommentsModel` 和 `CommentCreationResponse`。

更新 `ImgurAPI.csproj`，新增多個模型引用，移除 `AlbumImageVotingModel`。

在 `ImgurContext.cs` 中，新增 `Account` 類的實例以支持帳戶操作。

移除 `AlbumImageVotingModel.cs`，整合功能至 `VotingResponseModel`。

在 `Account.cs` 中，新增獲取帳戶設置和圖片的方法，並引入相關數據模型。

定義 `AccountImagesModel` 和 `AccountSettingModel` 的數據結構，支持 API 返回的數據。

新增 `BasicResponseModel` 和 `CommentCreationResponse` 的響應模型，包含成功標誌和狀態碼。

定義 `CommentsModel` 和 `VotingResponseModel` 的數據結構，支持 API 返回的評論和投票數據。

--- a/ImgurAPI/ImgurAPI.csproj
+++ b/ImgurAPI/ImgurAPI.csproj
@@ -50,17 +50,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accounts\Account.cs" />
     <Compile Include="Albums\Album.cs" />
     <Compile Include="Comments\Comment.cs" />
     <Compile Include="Gellaries\Gallery.cs" />
     <Compile Include="Images\Image.cs" />
     <Compile Include="ImgurContext.cs" />
+    <Compile Include="Models\AccountImagesModel.cs" />
+    <Compile Include="Models\AccountSettingModel.cs" />
     <Compile Include="Models\AlbumCreationModel.cs" />
     <Compile Include="Models\AlbumImageCommentCreationModel.cs" />
     <Compile Include="Models\AlbumImagesModel.cs" />
     <Compile Include="Models\AlbumImageVotesModel.cs" />
-    <Compile Include="Models\AlbumImageVotingModel.cs" />
+    <Compile Include="Models\BasicResponseModel.cs" />
+    <Compile Include="Models\CommentCreationResponse.cs" />
+    <Compile Include="Models\VotingResponseModel.cs" />
     <Compile Include="Models\AlbumModel.cs" />
+    <Compile Include="Models\CommentsModel.cs" />
     <Compile Include="Models\GalleryAlbumModel.cs" />
     <Compile Include="Models\GallerySearchModel.cs" />
     <Compile Include="Models\ImageModel.cs" />
