新增相冊相關功能與資料模型
在 `Account.cs` 中新增 `GetAlbums` 方法，以根據用戶名和頁碼獲取相冊資料。
在 `Album.cs` 中新增 `UpdateAlbum` 方法，允許更新相冊的標題、描述和圖片 ID。
更新 `ImgurAPI.csproj`，新增 `AlbumsModel.cs` 的編譯引用。
在 `AlbumsModel.cs` 中新增 `AlbumsModel` 類別及其內部的 `Datum` 類別，表示相冊的資料結構。

--- a/ImgurAPI/ImgurAPI.csproj
+++ b/ImgurAPI/ImgurAPI.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Models\AlbumImageCommentCreationModel.cs" />
     <Compile Include="Models\AlbumImagesModel.cs" />
     <Compile Include="Models\AlbumImageVotesModel.cs" />
+    <Compile Include="Models\AlbumsModel.cs" />
     <Compile Include="Models\BasicResponseModel.cs" />
     <Compile Include="Models\CommentCreationResponse.cs" />
     <Compile Include="Models\VotingResponseModel.cs" />
