重構帳戶和相簿相關的 API 方法
在 `Account.cs`、`Album.cs`、`Comment.cs` 和 `Gallery.cs` 中，將 `_request` 的修飾符更改為 `readonly`，並新增多個方法以增強功能。更新 `ImgurContext.cs` 中的類型初始化，並調整 `ImgurAPI.csproj` 中的模型路徑。移除不必要的 `using` 語句，並新增 `AddImageToAnAlbumResponse` 和 `AlbumIDsResponse` 類，簡化響應模型結構。

--- a/ImgurAPI/ImgurAPI.csproj
+++ b/ImgurAPI/ImgurAPI.csproj
@@ -56,22 +56,24 @@
     <Compile Include="Gellaries\Gallery.cs" />
     <Compile Include="Images\Image.cs" />
     <Compile Include="ImgurContext.cs" />
-    <Compile Include="Models\AccountImagesModel.cs" />
-    <Compile Include="Models\AccountSettingModel.cs" />
-    <Compile Include="Models\AlbumCreationModel.cs" />
-    <Compile Include="Models\AlbumImageCommentCreationModel.cs" />
-    <Compile Include="Models\AlbumImagesModel.cs" />
-    <Compile Include="Models\AlbumImageVotesModel.cs" />
-    <Compile Include="Models\AlbumsModel.cs" />
-    <Compile Include="Models\BasicResponseModel.cs" />
-    <Compile Include="Models\CommentCreationResponse.cs" />
+    <Compile Include="Models\Account\AccountImagesModel.cs" />
+    <Compile Include="Models\Account\AccountSettingModel.cs" />
+    <Compile Include="Models\Album\AddImageToAnAlbumResponse.cs" />
+    <Compile Include="Models\Album\AlbumCreationModel.cs" />
+    <Compile Include="Models\Album\AlbumIDsResponse.cs" />
+    <Compile Include="Models\Album\AlbumImageCommentCreationModel.cs" />
+    <Compile Include="Models\Album\AlbumImagesModel.cs" />
+    <Compile Include="Models\Gallery\AlbumImageVotesModel.cs" />
+    <Compile Include="Models\Album\AlbumsModel.cs" />
+    <Compile Include="Models\BasicResponse.cs" />
+    <Compile Include="Models\Comment\CommentCreationResponse.cs" />
     <Compile Include="Models\VotingResponseModel.cs" />
-    <Compile Include="Models\AlbumModel.cs" />
-    <Compile Include="Models\CommentsModel.cs" />
-    <Compile Include="Models\GalleryAlbumModel.cs" />
-    <Compile Include="Models\GallerySearchModel.cs" />
-    <Compile Include="Models\ImageModel.cs" />
-    <Compile Include="Models\ImageUploadModel.cs" />
+    <Compile Include="Models\Album\AlbumModel.cs" />
+    <Compile Include="Models\Gallery\CommentsModel.cs" />
+    <Compile Include="Models\Gallery\GalleryAlbumModel.cs" />
+    <Compile Include="Models\Gallery\GallerySearchModel.cs" />
+    <Compile Include="Models\Image\ImageModel.cs" />
+    <Compile Include="Models\Image\ImageUploadModel.cs" />
     <Compile Include="Models\Params\AlbumCreationParam.cs" />
     <Compile Include="Models\Params\GallerySearchParam.cs" />
     <Compile Include="Models\Params\ImageUploadParam.cs" />
